@@ -41,31 +41,53 @@
 				<int key="NSvFlags">256</int>
 				<object class="NSMutableArray" key="NSSubviews">
 					<bool key="EncodedWithXMLCoder">YES</bool>
-					<object class="NSButton" id="319674394">
+					<object class="NSButton" id="868571400">
 						<reference key="NSNextResponder" ref="443671666"/>
 						<int key="NSvFlags">268</int>
-						<string key="NSFrame">{{263, 131}, {146, 30}}</string>
+						<string key="NSFrame">{{263, 118}, {103, 18}}</string>
 						<reference key="NSSuperview" ref="443671666"/>
 						<bool key="NSEnabled">YES</bool>
-						<object class="NSButtonCell" key="NSCell" id="680210794">
+						<object class="NSButtonCell" key="NSCell" id="321474985">
 							<int key="NSCellFlags">67239424</int>
 							<int key="NSCellFlags2">0</int>
-							<string key="NSContents">Télé-déploiement</string>
+							<string key="NSContents">Mode Lazy</string>
 							<object class="NSFont" key="NSSupport" id="691464604">
 								<string key="NSName">LucidaGrande</string>
 								<double key="NSSize">13</double>
 								<int key="NSfFlags">1044</int>
 							</object>
-							<reference key="NSControlView" ref="319674394"/>
+							<reference key="NSControlView" ref="868571400"/>
 							<int key="NSButtonFlags">1211912703</int>
 							<int key="NSButtonFlags2">2</int>
-							<object class="NSCustomResource" key="NSNormalImage" id="722386050">
+							<object class="NSCustomResource" key="NSNormalImage" id="635588271">
 								<string key="NSClassName">NSImage</string>
 								<string key="NSResourceName">NSSwitch</string>
 							</object>
 							<object class="NSButtonImageSource" key="NSAlternateImage" id="344584947">
 								<string key="NSImageName">NSSwitch</string>
 							</object>
+							<string key="NSAlternateContents"/>
+							<string key="NSKeyEquivalent"/>
+							<int key="NSPeriodicDelay">200</int>
+							<int key="NSPeriodicInterval">25</int>
+						</object>
+					</object>
+					<object class="NSButton" id="319674394">
+						<reference key="NSNextResponder" ref="443671666"/>
+						<int key="NSvFlags">268</int>
+						<string key="NSFrame">{{263, 151}, {146, 30}}</string>
+						<reference key="NSSuperview" ref="443671666"/>
+						<bool key="NSEnabled">YES</bool>
+						<object class="NSButtonCell" key="NSCell" id="680210794">
+							<int key="NSCellFlags">67239424</int>
+							<int key="NSCellFlags2">0</int>
+							<string key="NSContents">Télé-déploiement</string>
+							<reference key="NSSupport" ref="691464604"/>
+							<reference key="NSControlView" ref="319674394"/>
+							<int key="NSButtonFlags">1211912703</int>
+							<int key="NSButtonFlags2">2</int>
+							<reference key="NSNormalImage" ref="635588271"/>
+							<reference key="NSAlternateImage" ref="344584947"/>
 							<string key="NSAlternateContents"/>
 							<string key="NSKeyEquivalent"/>
 							<int key="NSPeriodicDelay">200</int>
@@ -353,7 +375,7 @@
 					<object class="NSButton" id="863583811">
 						<reference key="NSNextResponder" ref="443671666"/>
 						<int key="NSvFlags">256</int>
-						<string key="NSFrame">{{263, 175}, {103, 18}}</string>
+						<string key="NSFrame">{{263, 195}, {103, 18}}</string>
 						<reference key="NSSuperview" ref="443671666"/>
 						<bool key="NSEnabled">YES</bool>
 						<object class="NSButtonCell" key="NSCell" id="475782821">
@@ -364,7 +386,7 @@
 							<reference key="NSControlView" ref="863583811"/>
 							<int key="NSButtonFlags">1211912703</int>
 							<int key="NSButtonFlags2">2</int>
-							<reference key="NSNormalImage" ref="722386050"/>
+							<reference key="NSNormalImage" ref="635588271"/>
 							<reference key="NSAlternateImage" ref="344584947"/>
 							<string key="NSAlternateContents"/>
 							<string key="NSKeyEquivalent"/>
@@ -486,6 +508,14 @@
 					</object>
 					<int key="connectionID">99</int>
 				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBOutletConnection" key="connection">
+						<string key="label">lazymode</string>
+						<reference key="source" ref="439491322"/>
+						<reference key="destination" ref="868571400"/>
+					</object>
+					<int key="connectionID">104</int>
+				</object>
 			</object>
 			<object class="IBMutableOrderedSet" key="objectRecords">
 				<object class="NSArray" key="orderedObjects">
@@ -531,9 +561,10 @@
 							<reference ref="666469763"/>
 							<reference ref="593675993"/>
 							<reference ref="592223138"/>
-							<reference ref="863583811"/>
 							<reference ref="537693570"/>
 							<reference ref="404573241"/>
+							<reference ref="863583811"/>
+							<reference ref="868571400"/>
 							<reference ref="319674394"/>
 						</object>
 						<reference key="parent" ref="0"/>
@@ -771,6 +802,20 @@
 						<reference key="object" ref="680210794"/>
 						<reference key="parent" ref="319674394"/>
 					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">100</int>
+						<reference key="object" ref="868571400"/>
+						<object class="NSMutableArray" key="children">
+							<bool key="EncodedWithXMLCoder">YES</bool>
+							<reference ref="321474985"/>
+						</object>
+						<reference key="parent" ref="443671666"/>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">101</int>
+						<reference key="object" ref="321474985"/>
+						<reference key="parent" ref="868571400"/>
+					</object>
 				</object>
 			</object>
 			<object class="NSMutableDictionary" key="flattenedProperties">
@@ -779,6 +824,8 @@
 					<bool key="EncodedWithXMLCoder">YES</bool>
 					<string>10.IBPluginDependency</string>
 					<string>10.ImportedFromIB2</string>
+					<string>100.IBPluginDependency</string>
+					<string>101.IBPluginDependency</string>
 					<string>13.IBPluginDependency</string>
 					<string>13.IBViewBoundsToFrameTransform</string>
 					<string>13.ImportedFromIB2</string>
@@ -831,6 +878,8 @@
 					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
 					<boolean value="YES"/>
 					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
+					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
+					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
 					<object class="NSAffineTransform">
 						<bytes key="NSTransformStruct">P4AAAL+AAABDBAAAw5aAAA</bytes>
 					</object>
@@ -876,7 +925,7 @@
 					<boolean value="YES"/>
 					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
 					<object class="NSAffineTransform">
-						<bytes key="NSTransformStruct">P4AAAL+AAABDk4AAw2wAAA</bytes>
+						<bytes key="NSTransformStruct">P4AAAL+AAABDg4AAwz8AAA</bytes>
 					</object>
 					<boolean value="YES"/>
 					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
@@ -884,12 +933,12 @@
 						<bytes key="NSTransformStruct">P4AAAL+AAABAwAAAw64AAA</bytes>
 					</object>
 					<boolean value="YES"/>
-					<string>{{329, 485}, {450, 360}}</string>
+					<string>{{19, 409}, {450, 360}}</string>
 					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
 					<boolean value="YES"/>
 					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
 					<object class="NSAffineTransform">
-						<bytes key="NSTransformStruct">P4AAAL+AAABDXAAAwx8AAA</bytes>
+						<bytes key="NSTransformStruct">P4AAAL+AAABDg4AAwzEAAA</bytes>
 					</object>
 					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
 				</object>
@@ -910,7 +959,7 @@
 				</object>
 			</object>
 			<nil key="sourceID"/>
-			<int key="maxID">99</int>
+			<int key="maxID">104</int>
 		</object>
 		<object class="IBClassDescriber" key="IBDocument.Classes">
 			<object class="NSMutableArray" key="referencedPartialClassDescriptions">
@@ -1007,6 +1056,7 @@
 							<string>cacertfile</string>
 							<string>debugmode</string>
 							<string>download</string>
+							<string>lazymode</string>
 							<string>logfile</string>
 							<string>protocolist</string>
 							<string>server</string>
@@ -1015,6 +1065,7 @@
 						<object class="NSMutableArray" key="dict.values">
 							<bool key="EncodedWithXMLCoder">YES</bool>
 							<string>NSTextField</string>
+							<string>NSButton</string>
 							<string>NSButton</string>
 							<string>NSButton</string>
 							<string>NSTextField</string>
@@ -1030,6 +1081,7 @@
 							<string>cacertfile</string>
 							<string>debugmode</string>
 							<string>download</string>
+							<string>lazymode</string>
 							<string>logfile</string>
 							<string>protocolist</string>
 							<string>server</string>
@@ -1047,6 +1099,10 @@
 							</object>
 							<object class="IBToOneOutletInfo">
 								<string key="name">download</string>
+								<string key="candidateClassName">NSButton</string>
+							</object>
+							<object class="IBToOneOutletInfo">
+								<string key="name">lazymode</string>
 								<string key="candidateClassName">NSButton</string>
 							</object>
 							<object class="IBToOneOutletInfo">
@@ -1609,7 +1665,7 @@
 		</object>
 		<object class="NSMutableDictionary" key="IBDocument.PluginDeclaredDependencyDefaults">
 			<string key="NS.key.0">com.apple.InterfaceBuilder.CocoaPlugin.macosx</string>
-			<integer value="1040" key="NS.object.0"/>
+			<integer value="1060" key="NS.object.0"/>
 		</object>
 		<object class="NSMutableDictionary" key="IBDocument.PluginDeclaredDevelopmentDependencies">
 			<string key="NS.key.0">com.apple.InterfaceBuilder.CocoaPlugin.InterfaceBuilder3</string>
